force-app/main/default/objects/OW_review__c/OW_review__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage the review process with existing clients. It&#39;s a fairly lightweight place to manage the upcoming reviews and track the initial conversations. The resulting workflows - preparation of decks, advice etc - are all managed in the advice object.</description>
    <label>Review</label>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>