force-app/main/default/objects/OW_review__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <inlineHelpText>Does the advice make sense and seem to be both suitable, but also the right thing for the client? If not, please flat to planner/head planner</inlineHelpText>
    <label>Advice</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>