force-app/main/default/objects/OW_review__c/fields/Advice_Changes_Required__c.field-meta.xml
<CustomField>
    <fullName>Advice_Changes_Required__c</fullName>
    <inlineHelpText>Detail the changes that need to be made to the advice</inlineHelpText>
    <label>Advice Changes Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>