force-app/main/default/objects/OW_review__c/fields/Annual_review_checklist__c.field-meta.xml
<CustomField>
    <fullName>Annual_review_checklist__c</fullName>
    <description>A link to the annual review checklist.</description>
    <label>Annual review checklist</label>
    <type>Url</type>
</CustomField>