force-app/main/default/objects/OW_review__c/fields/Annual_review_deck_link__c.field-meta.xml
<CustomField>
    <fullName>Annual_review_deck_link__c</fullName>
    <description>A link to the annual review deck.</description>
    <label>Annual review deck link</label>
    <type>Url</type>
</CustomField>