force-app/main/default/objects/OW_review__c/fields/Annual_Review_G_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_G_Drive_Folder__c</fullName>
    <label>Annual Review G-Drive Folder</label>
    <type>Url</type>
</CustomField>