force-app/main/default/objects/OW_review__c/fields/Assigned_Planner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the user who is the assigned planner for the review.</description>
    <label>Assigned planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>