force-app/main/default/objects/OW_review__c/fields/Carried_Forward_Losses__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Losses__c</fullName>
    <description>The value of any carried forward losses.</description>
    <label>Carried forward losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>