force-app/main/default/objects/OW_review__c/fields/Catch_Up_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Catch_Up_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to be checked once the catch up call is complete, otherwise it will remain unchecked.</description>
    <label>Catch up call complete</label>
    <type>Checkbox</type>
</CustomField>