force-app/main/default/objects/OW_review__c/fields/Changes_to_Client_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Client_Circumstances__c</fullName>
    <description>Used to capture details of any changes to the client&#39;s circumstances.</description>
    <label>Changes to client circumstances</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>