force-app/main/default/objects/OW_review__c/fields/Client_Confirmation_to_Proceed__c.field-meta.xml
<CustomField>
    <fullName>Client_Confirmation_to_Proceed__c</fullName>
    <description>Captures the level of confirmation the client gave to proceed. This is a picklist to show it was either confirmed fully, confrimed with some changes or not confirmed.</description>
    <label>Client confirmation to proceed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Yes - In full</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - With changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>