force-app/main/default/objects/OW_review__c/fields/Client_Fact_Find_Link__c.field-meta.xml
<CustomField>
    <fullName>Client_Fact_Find_Link__c</fullName>
    <description>A link to the client&apos;s fact find.</description>
    <formula>OW_fact_find__r.FF_Questionnaire_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client fact find link</label>
    <type>Text</type>
</CustomField>