force-app/main/default/objects/OW_review__c/fields/Create_Illustrations__c.field-meta.xml
<CustomField>
    <fullName>Create_Illustrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Illustrations</label>
    <type>Checkbox</type>
</CustomField>