force-app/main/default/objects/OW_review__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>This is the date that the next review date will be based on.</description>
    <inlineHelpText>This is the date that the next review date will be based on</inlineHelpText>
    <label>Date review meeting completed</label>
    <type>Date</type>
</CustomField>