force-app/main/default/objects/OW_review__c/fields/Date_of_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Acceptance__c</fullName>
    <label>Date of Acceptance</label>
    <type>Date</type>
</CustomField>