force-app/main/default/objects/OW_review__c/fields/Download_IO_Valuation_Report__c.field-meta.xml
<CustomField>
    <fullName>Download_IO_Valuation_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox regarding if the IO valuation report has been downloaded.</description>
    <label>Download IO valuation report</label>
    <type>Checkbox</type>
</CustomField>