force-app/main/default/objects/OW_review__c/fields/Figures__c.field-meta.xml
<CustomField>
    <fullName>Figures__c</fullName>
    <description>A textbox to comment on the state of the figures as per the help text.</description>
    <inlineHelpText>do they all add up, make sense, no fees missing etc</inlineHelpText>
    <label>Figures</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>