force-app/main/default/objects/OW_review__c/fields/Follow_on_Actions__c.field-meta.xml
<CustomField>
    <fullName>Follow_on_Actions__c</fullName>
    <label>Follow on Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>