force-app/main/default/objects/OW_review__c/fields/Format_of_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Format_of_Acceptance__c</fullName>
    <description>How was this advice accepted? Choose from the picklist for the different formats.</description>
    <label>Format of acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Meeting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Over Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>