force-app/main/default/objects/OW_review__c/fields/Formatting__c.field-meta.xml
<CustomField>
    <fullName>Formatting__c</fullName>
    <inlineHelpText>Colours, positioning etc</inlineHelpText>
    <label>Formatting</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>