force-app/main/default/objects/OW_review__c/fields/Fulfilment_Actioned__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Actioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to confirm if fuflilment has been actioned.</description>
    <label>Fulfilment actioned</label>
    <type>Checkbox</type>
</CustomField>