force-app/main/default/objects/OW_review__c/fields/Fulfilment_Forms_List__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Forms_List__c</fullName>
    <label>Fulfilment Forms List</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>