force-app/main/default/objects/OW_review__c/fields/Fulfilment_From_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_From_Status__c</fullName>
    <description>Detail the status of each fulfilment form &quot;Signed&quot;, &quot;Left With Client&quot;, &quot;To be sent to client&quot;, &quot;Change required&quot; etc</description>
    <inlineHelpText>Detail the status of each fulfilment form &quot;Signed&quot;, &quot;Left With Client&quot;, &quot;To be sent to client&quot;, &quot;Change required&quot; etc</inlineHelpText>
    <label>Fulfilment from status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>