force-app/main/default/objects/OW_review__c/fields/Gains_Realised_This_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Gains_Realised_This_Tax_Year__c</fullName>
    <description>The value of gains realised this tax year.</description>
    <label>Gains realised this tax year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>