force-app/main/default/objects/OW_review__c/fields/Independent_ISA_contributions__c.field-meta.xml
<CustomField>
    <fullName>Independent_ISA_contributions__c</fullName>
    <description>Details of the client&apos;s ISA contributions made independently of us.</description>
    <inlineHelpText>Contributions made independently of us, that we may not know about.</inlineHelpText>
    <label>Independent ISA contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>