force-app/main/default/objects/OW_review__c/fields/Is_fulfilment_required__c.field-meta.xml
<CustomField>
    <fullName>Is_fulfilment_required__c</fullName>
    <description>A picklist of the different types of required fulfilment.</description>
    <label>Types of fulfilment required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump Sum Investment</fullName>
            </value>
            <value>
                <fullName>Regular Contribution</fullName>
            </value>
            <value>
                <fullName>Regular Withdrawal</fullName>
            </value>
            <value>
                <fullName>Change to Investment Mandate</fullName>
                <label>Change to Investment Mandate / Change to Investment Mandate / Rebalance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>