force-app/main/default/objects/OW_review__c/fields/List_Illustrations__c.field-meta.xml
<CustomField>
    <fullName>List_Illustrations__c</fullName>
    <label>List illustrations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>