force-app/main/default/objects/OW_review__c/fields/List_Voyant_Updates__c.field-meta.xml
<CustomField>
    <fullName>List_Voyant_Updates__c</fullName>
    <label>List voyant updates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>