force-app/main/default/objects/OW_review__c/fields/Losses_Realised_This_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised_This_Tax_Year__c</fullName>
    <description>Value of any losses realised this tax year.</description>
    <label>Losses realised this tax year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>