force-app/main/default/objects/OW_review__c/fields/Meeting_recording_saved_to_file__c.field-meta.xml
<CustomField>
    <fullName>Meeting_recording_saved_to_file__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to note if the meeting recording has been saved to file.</description>
    <label>Meeting recording saved to file</label>
    <type>Checkbox</type>
</CustomField>