force-app/main/default/objects/OW_review__c/fields/Misc_Research_Complete__c.field-meta.xml
<CustomField>
    <fullName>Misc_Research_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Misc Research Complete</label>
    <type>Checkbox</type>
</CustomField>