force-app/main/default/objects/OW_review__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(NOT(ISBLANK(OW_household__r.OctopusMoneyRecord__c)), CASESAFEID(OW_household__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM record</label>
    <type>Text</type>
</CustomField>