force-app/main/default/objects/OW_review__c/fields/OW_anything_else_to_know__c.field-meta.xml
<CustomField>
    <fullName>OW_anything_else_to_know__c</fullName>
    <description>The customer is asked as part of their review whether there is anything else we should know. This field is populated with their response via the portal integration and should be read only to internal users.</description>
    <inlineHelpText>This field is populated with the customer&#39;s response via the portal</inlineHelpText>
    <label>Is there anything else we should know?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>