force-app/main/default/objects/OW_review__c/fields/OW_catch_up_call_notes__c.field-meta.xml
<CustomField>
    <fullName>OW_catch_up_call_notes__c</fullName>
    <description>Used to capture notes from the catch up call the partner has with the customer. Only editable by the partner.</description>
    <label>Catch up call notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>