force-app/main/default/objects/OW_review__c/fields/OW_client_fact_find_link__c.field-meta.xml
<CustomField>
    <fullName>OW_client_fact_find_link__c</fullName>
    <description>Formula field that pulls down the link from the fact find record so this can be easily accessed from the review record.</description>
    <formula>OW_fact_find__r.FF_Questionnaire_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client fact find link</label>
    <type>Text</type>
</CustomField>