force-app/main/default/objects/OW_review__c/fields/OW_closed_reason__c.field-meta.xml
<CustomField>
    <fullName>OW_closed_reason__c</fullName>
    <description>This</description>
    <inlineHelpText>Cancelled will be used for reasons like a client offboarding. Skipped will be used where we decide to miss the review for a given year. Client request means we have skipped at the request of the client.</inlineHelpText>
    <label>Closed reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Client request</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>