force-app/main/default/objects/OW_review__c/fields/OW_completed_by_client__c.field-meta.xml
<CustomField>
    <fullName>OW_completed_by_client__c</fullName>
    <description>Timestamp of when the client completed the profile review.</description>
    <inlineHelpText>Timestamp of when the client completed the Profile Review</inlineHelpText>
    <label>Completed by client</label>
    <type>DateTime</type>
</CustomField>