force-app/main/default/objects/OW_review__c/fields/OW_due_date__c.field-meta.xml
<CustomField>
    <fullName>OW_due_date__c</fullName>
    <description>The final day of the customer&#39;s annual review month. This value is set at the time of creation so that if the annual review month changes for the future, this due date does not.</description>
    <label>Due date</label>
    <type>Date</type>
</CustomField>