force-app/main/default/objects/OW_review__c/fields/OW_expected_changes_long_term__c.field-meta.xml
<CustomField>
    <fullName>OW_expected_changes_long_term__c</fullName>
    <description>The customer is asked as part of their review whether they expect any long term changes to their situation. This field is populated with their response via the portal integration and should be read only to internal users.</description>
    <inlineHelpText>This field is populated with the customer&#39;s response via the portal</inlineHelpText>
    <label>Expected changes (long term)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>