force-app/main/default/objects/OW_review__c/fields/OW_fact_find__c.field-meta.xml
<CustomField>
    <fullName>OW_fact_find__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated with the Precise FP fact find for clients on the old fact find. This field should be deprecated when all customers are moved to the new fact find.</description>
    <inlineHelpText>This is only used for client on the old Precise FP fact find.</inlineHelpText>
    <label>Annual review fact find</label>
    <referenceTo>Fact_Find__c</referenceTo>
    <relationshipName>Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>