force-app/main/default/objects/OW_review__c/fields/OW_fact_find_status__c.field-meta.xml
<CustomField>
    <fullName>OW_fact_find_status__c</fullName>
    <description>Formula field that pulls down the status from the fact find record so this can be easily accessed from the review record.</description>
    <formula>TEXT(OW_fact_find__r.FF_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact find status</label>
    <type>Text</type>
</CustomField>