force-app/main/default/objects/OW_review__c/fields/OW_fact_find_visible_to_customer__c.field-meta.xml
<CustomField>
    <fullName>OW_fact_find_visible_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the portal to determine whether the fact find is visible to the customer. This defaults to false as it should not be visible to the customer until we are ready for them to complete it following manual checks by the planning team. This will be set to true when the fact find is shared then false again when it is completed.</description>
    <inlineHelpText>If true, the customer can currently view the fact find. Only applies to the new fact find through the Octopus Wealth fact find.</inlineHelpText>
    <label>Zdel-Fact find visible to customer</label>
    <type>Checkbox</type>
</CustomField>