force-app/main/default/objects/OW_review__c/fields/OW_is_closed__c.field-meta.xml
<CustomField>
    <fullName>OW_is_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the annual review record is closed. If unchecked, the annual review is open. Used by the portal to know whether to display an annual review to the customer as well as by other automation and validation to know if reviews are in progress.</description>
    <label>Is closed</label>
    <type>Checkbox</type>
</CustomField>