force-app/main/default/objects/OW_review__c/fields/OW_lifeline_scenarios_to_model__c.field-meta.xml
<CustomField>
    <fullName>OW_lifeline_scenarios_to_model__c</fullName>
    <description>The customer is asked as part of their review whether they want any lifeline scenarios modelled. This field is populated with their response via the portal integration and should be read only to internal users.</description>
    <inlineHelpText>This field is populated with the customer&apos;s response via the portal</inlineHelpText>
    <label>Lifeline scenarios to model</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>