force-app/main/default/objects/OW_review__c/fields/OW_misc_research_instructions__c.field-meta.xml
<CustomField>
    <fullName>OW_misc_research_instructions__c</fullName>
    <description>Textbox to note miscellaneous research instructions.</description>
    <inlineHelpText>Carry forward AA, LTA, CGT, Rebalance &amp; Miscellaneous</inlineHelpText>
    <label>Misc. research instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>