force-app/main/default/objects/OW_review__c/fields/OW_modelling_scenarios__c.field-meta.xml
<CustomField>
    <fullName>OW_modelling_scenarios__c</fullName>
    <description>A textbox for modelling scenarios.</description>
    <label>Modelling scenarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>