force-app/main/default/objects/OW_review__c/fields/OW_notes_for_partner__c.field-meta.xml
<CustomField>
    <fullName>OW_notes_for_partner__c</fullName>
    <description>To be completed by the planner where they can provide information for the partner to be aware of going into the catch up call.</description>
    <inlineHelpText>Any other issues such as LTA/CF/AA/external scheme contributions, etc</inlineHelpText>
    <label>Notes for partner</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>