force-app/main/default/objects/OW_review__c/fields/OW_profile_review__c.field-meta.xml
<CustomField>
    <fullName>OW_profile_review__c</fullName>
    <description>A picklist to show if the profile review is open or closed.</description>
    <label>Profile review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>