force-app/main/default/objects/OW_review__c/fields/OW_request_valuation_updates__c.field-meta.xml
<CustomField>
    <fullName>OW_request_valuation_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to ensure that any required valuation updates have been requested.</description>
    <inlineHelpText>Tick once you have requested all valuation updates required. 

To do this, open a financial product and click the request valuation update button in the top right hand corner.</inlineHelpText>
    <label>Valuation updates requested</label>
    <type>Checkbox</type>
</CustomField>