force-app/main/default/objects/OW_review__c/fields/OW_review_date__c.field-meta.xml
<CustomField>
    <fullName>OW_review_date__c</fullName>
    <description>Used to capture the date of the annual review, which is set to be the date the associated advice is presented in whatever format.</description>
    <inlineHelpText>To set a date here, please ensure there is a linked advice record and then set the suitability meeting date/time.</inlineHelpText>
    <label>Review date</label>
    <type>Date</type>
</CustomField>