force-app/main/default/objects/OW_review__c/fields/OW_review_fact_find_status__c.field-meta.xml
<CustomField>
    <fullName>OW_review_fact_find_status__c</fullName>
    <description>Stores the status of the review fact find so that users are aware of whether the customer can see it as well as manually control this.</description>
    <inlineHelpText>Only applies to customers on the new profile. You can use this to manually control visibility of the fact find or to indicate that we have skipped it for this customer.</inlineHelpText>
    <label>Review fact find status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not visible to customer</fullName>
                <default>true</default>
                <label>Not visible to customer</label>
            </value>
            <value>
                <fullName>Visible to customer</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
                <label>Completed standard profile</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>