force-app/main/default/objects/OW_review__c/fields/OW_status__c.field-meta.xml
<CustomField>
    <fullName>OW_status__c</fullName>
    <description>The status of a given annual review in the annual review process</description>
    <label>Review status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepare</fullName>
                <default>true</default>
                <label>Prepare</label>
            </value>
            <value>
                <fullName>Await fact find</fullName>
            </value>
            <value>
                <fullName>Catch up</fullName>
            </value>
            <value>
                <fullName>Provide advice</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Create Deck</fullName>
                <isActive>false</isActive>
                <label>Create Deck</label>
            </value>
            <value>
                <fullName>Fact Find Update</fullName>
                <isActive>false</isActive>
                <label>Fact Find Update</label>
            </value>
            <value>
                <fullName>Partner Review</fullName>
                <isActive>false</isActive>
                <label>Partner Review</label>
            </value>
            <value>
                <fullName>Review Deck</fullName>
                <isActive>false</isActive>
                <label>Review Deck</label>
            </value>
            <value>
                <fullName>Review Slides</fullName>
                <isActive>false</isActive>
                <label>Review Slides</label>
            </value>
            <value>
                <fullName>Voyant Update</fullName>
                <isActive>false</isActive>
                <label>Voyant Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>