force-app/main/default/objects/OW_review__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the user who is the partner for this advice.</description>
    <label>Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>