force-app/main/default/objects/OW_review__c/fields/Partner_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Partner_Debrief__c</fullName>
    <label>Partner Debrief Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>