force-app/main/default/objects/OW_review__c/fields/Partner_Deck_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deck_Review_Comments__c</fullName>
    <description>A textbox for the partner to leave their review comments for the deck.</description>
    <label>Partner deck review comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>