force-app/main/default/objects/OW_review__c/fields/ProcessVersion__c.field-meta.xml
<CustomField>
    <fullName>ProcessVersion__c</fullName>
    <defaultValue>2.0</defaultValue>
    <description>Captures a process version number that can be used to hide and expose items on the screen based on when they are introduced and deprecated.</description>
    <label>Process version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>