force-app/main/default/objects/OW_review__c/fields/ReviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReviewDateTime__c</fullName>
    <description>The date and time when the review was shared with the client.</description>
    <label>Review shared</label>
    <type>DateTime</type>
</CustomField>