force-app/main/default/objects/OW_review__c/fields/ReviewDeckUrl__c.field-meta.xml
<CustomField>
    <fullName>ReviewDeckUrl__c</fullName>
    <description>The URL of the deck associated with this review, if applicable. Used to capture annual review decks, which are shared outside of advice, primarily.</description>
    <label>Review deck URL</label>
    <type>Url</type>
</CustomField>