force-app/main/default/objects/OW_review__c/fields/ReviewType__c.field-meta.xml
<CustomField>
    <fullName>ReviewType__c</fullName>
    <description>Captures the type of review, influencing how the process unfolds.</description>
    <label>Review type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANNUAL_REVIEW_AUTOMATIC</fullName>
                <label>Annual review | Automatic</label>
            </value>
            <value>
                <fullName>ANNUAL_REVIEW_MANUAL</fullName>
                <label>Annual review | Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>