force-app/main/default/objects/OW_review__c/fields/Send_Annual_Review_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Send_Annual_Review_Next_Steps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Annual Review Next Steps</label>
    <type>Checkbox</type>
</CustomField>