force-app/main/default/objects/OW_review__c/fields/Setup_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fulfilment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox relating to the set up of fulfilment.</description>
    <label>Setup fulfilment</label>
    <type>Checkbox</type>
</CustomField>