force-app/main/default/objects/OW_review__c/fields/Stop_Internal_User_Update__c.field-meta.xml
<CustomField>
    <fullName>Stop_Internal_User_Update__c</fullName>
    <description>A timestamp of when to stop internal user updates.</description>
    <label>Stop internal user update</label>
    <type>DateTime</type>
</CustomField>