force-app/main/default/objects/OW_review__c/fields/Suitability_builder_link_annual_review__c.field-meta.xml
<CustomField>
    <fullName>Suitability_builder_link_annual_review__c</fullName>
    <description>A link to the suitability builder related to this review.</description>
    <label>Suitability builder link (annual review)</label>
    <type>Url</type>
</CustomField>