force-app/main/default/objects/OW_review__c/fields/Supporting_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Calculations__c</fullName>
    <description>A textbox to give detail around any supporting calculations, such as Carry Forward, LTA &amp; CGT.</description>
    <inlineHelpText>Carry Forward, LTA, CGT</inlineHelpText>
    <label>Supporting calculations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>