force-app/main/default/objects/OW_review__c/fields/Typos__c.field-meta.xml
<CustomField>
    <fullName>Typos__c</fullName>
    <inlineHelpText>Spelling errors, wrong client or provider name etc</inlineHelpText>
    <label>Typos</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>