force-app/main/default/objects/OW_review__c/fields/Update_IO__c.field-meta.xml
<CustomField>
    <fullName>Update_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox relating to updating IO.</description>
    <label>Update IO</label>
    <type>Checkbox</type>
</CustomField>